WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193172
Incorrect clipping across compositing boundary.
https://bugs.webkit.org/show_bug.cgi?id=193172
Summary
Incorrect clipping across compositing boundary.
alan
Reported
2019-01-05 14:33:29 PST
rdar://problem/44693008
Attachments
Patch
(8.56 KB, patch)
2019-01-05 15:34 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.53 KB, patch)
2019-01-05 16:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.73 MB, application/zip)
2019-01-05 18:20 PST
,
EWS Watchlist
no flags
Details
Patch
(8.56 KB, patch)
2019-01-05 18:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-05 15:34:54 PST
Created
attachment 358443
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-01-05 15:39:24 PST
Comment on
attachment 358443
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358443&action=review
> Source/WebCore/ChangeLog:12 > + clip rect update using the wrong painting root. This happens when the layer hierarchy and the compositing contex do not match.
contex
> Source/WebCore/rendering/RenderLayer.cpp:5486 > + auto paginationBoundary = parent()->enclosingPaginationLayer(IncludeCompositedPaginatedLayers) != enclosingPaginationLayer(IncludeCompositedPaginatedLayers); > + auto compositionBoundaryForRepaint = parent()->enclosingCompositingLayerForRepaint() != enclosingCompositingLayerForRepaint();
I hate auto for primitive types like bool. It doesn't save typing, and it's very unlikely that you'd ever refactor and change the type to get the benefit of auto. Here, reading "auto paginationBoundary" makes me think that there's some complex "boundary" type I have to go look for. These bools would read better as crossesPaginationBoundary, crossesCompositingBoundary.
alan
Comment 3
2019-01-05 16:26:13 PST
Created
attachment 358444
[details]
Patch
EWS Watchlist
Comment 4
2019-01-05 18:20:39 PST
Comment on
attachment 358444
[details]
Patch
Attachment 358444
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10644279
New failing tests: compositing/clipping/cached-cliprect-with-compositing-boundary.html
EWS Watchlist
Comment 5
2019-01-05 18:20:41 PST
Created
attachment 358448
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
alan
Comment 6
2019-01-05 18:25:10 PST
(In reply to Build Bot from
comment #4
)
> Comment on
attachment 358444
[details]
> Patch > >
Attachment 358444
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
https://webkit-queues.webkit.org/results/10644279
> > New failing tests: > compositing/clipping/cached-cliprect-with-compositing-boundary.html
Seriously? The bottom right corner of the iframe's inset border is different.
alan
Comment 7
2019-01-05 18:28:31 PST
Created
attachment 358449
[details]
Patch
WebKit Commit Bot
Comment 8
2019-01-05 19:54:34 PST
Comment on
attachment 358449
[details]
Patch Clearing flags on attachment: 358449 Committed
r239661
: <
https://trac.webkit.org/changeset/239661
>
WebKit Commit Bot
Comment 9
2019-01-05 19:54:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug